# qsc

./: .gitignore  LICENCE  README.md  makefile
ext/sprng5/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.ac
ext/sprng5/EXAMPLES/: Makefile  Makefile.am  Makefile.in  pi-simple.sprng  seed-simple.sprng  seed.sprng  simple-simple.sprng  spawn.sprng  sprng-simple.sprng  sprng.sprng
ext/sprng5/EXAMPLES/.deps/: convert_tmp-convert.Po  pi_simple_tmp-pi-simple.Po  seed_simple_tmp-seed-simple.Po  seed_tmp-seed.Po  simple_simple_tmp-simple-simple.Po  spawn_tmp-spawn.Po  sprng_simple_tmp-sprng-simple.Po  sprng_tmp-sprng.Po
ext/sprng5/EXAMPLES/F77/: Makefile  Makefile.am  Makefile.in  convertf.sprng  seedf-simple.sprng  seedf.sprng  sprngf.sprng  subroutinef.sprng
ext/sprng5/EXAMPLES/mpisprng/: Makefile  Makefile.am  Makefile.in
ext/sprng5/EXAMPLES/mpisprng/.deps/: 2streams_mpi_tmp-2streams_mpi.Po  fsprng_mpi_tmp-fsprng_mpi.Po  fsprng_simple_mpi_tmp-fsprng-simple_mpi.Po  message_mpi_tmp-message_mpi.Po  message_simple_mpi_tmp-message-simple_mpi.Po  pi_simple_mpi_tmp-pi-simple_mpi.Po  seed_mpi_tmp-seed_mpi.Po  seed_simple_mpi_tmp-seed-simple_mpi.Po  sprng_mpi_tmp-sprng_mpi.Po  sprng_simple_mpi_tmp-sprng-simple_mpi.Po
ext/sprng5/SRC/: .Makefile.swp  .template.cpp  .template.h  .vtemplate.cpp  .vtemplate.h  Makefile  Makefile.am  Makefile.in  basic.cpp  basic.h  bignum.cpp  bigrat.cpp  bigrat.h  cputime.cpp  drand.cpp  fwrap.cpp  fwrap.h  info.cpp  info.h  licensenotice.txt  makeseed.cpp  sprng.cpp  sprng.h  sprng_cpp.cpp  sprng_cpp.h  store.h
ext/sprng5/SRC/.deps/: libsprng_a-bignum.Po  libsprng_a-bigrat.Po  libsprng_a-cmrg.Po  libsprng_a-communicate.Po  libsprng_a-cputime.Po  libsprng_a-fwrap.Po  libsprng_a-info.Po  libsprng_a-lcg.Po  libsprng_a-lcg64.Po  libsprng_a-lfg.Po  libsprng_a-makeseed.Po  libsprng_a-memory.Po  libsprng_a-mlfg.Po  libsprng_a-pmlcg.Po  libsprng_a-primes_32.Po  libsprng_a-primes_64.Po  libsprng_a-sprng.Po  libsprng_a-sprng_cpp.Po  libsprng_a-store.Po
ext/sprng5/SRC/cmrg/: Makefile  Makefile.in  cmrg.cpp  cmrg.h
ext/sprng5/SRC/lcg/: Makefile  Makefile.in  lcg.cpp  lcg.h
ext/sprng5/SRC/lcg64/: Makefile  Makefile.in  lcg64.cpp
ext/sprng5/SRC/lfg/: Makefile  Makefile.in  lfg.cpp  lfg.h
ext/sprng5/SRC/mlfg/: Makefile  Makefile.in  mlfg.cpp  mlfg.h
ext/sprng5/SRC/pmlcg/: Makefile  Makefile.in  basic.h  bignum.h  info.h  longlong.h  pmlcg.cpp
ext/sprng5/TESTS/: Makefile  Makefile.am  Makefile.in  coupon.sprng  equidist.sprng  gap.sprng  maxt.tmp  perm.sprng  serial.tmp  sum.tmp  wolff.tmp
ext/sprng5/TESTS/.deps/: collisions_tmp-chisquare.Po  collisions_tmp-collisions.Po  collisions_tmp-communicate.Po  collisions_tmp-init_tests.Po  collisions_tmp-util.Po  coupon_tmp-chisquare.Po  coupon_tmp-communicate.Po  coupon_tmp-coupon.Po  coupon_tmp-init_tests.Po  coupon_tmp-stirling.Po  coupon_tmp-util.Po  equidist_tmp-chisquare.Po  equidist_tmp-communicate.Po  equidist_tmp-equidist.Po  equidist_tmp-init_tests.Po  equidist_tmp-util.Po  gap_tmp-chisquare.Po  gap_tmp-communicate.Po  gap_tmp-gap.Po  gap_tmp-init_tests.Po  gap_tmp-util.Po  maxt_tmp-chisquare.Po  maxt_tmp-communicate.Po  maxt_tmp-init_tests.Po  maxt_tmp-maxt.Po  maxt_tmp-util.Po  metropolis_tmp-chisquare.Po  metropolis_tmp-communicate.Po  metropolis_tmp-init_tests.Po  metropolis_tmp-metropolis.Po  metropolis_tmp-util.Po  perm_tmp-chisquare.Po  perm_tmp-communicate.Po  perm_tmp-init_tests.Po  perm_tmp-perm.Po  perm_tmp-util.Po  poker_tmp-chisquare.Po  poker_tmp-communicate.Po  poker_tmp-init_tests.Po  poker_tmp-poker.Po  (+37 more)
ext/sprng5/TESTS/mpitests/: Makefile  Makefile.am  Makefile.in
ext/sprng5/TESTS/mpitests/.deps/: collisions_tmp-chisquare.Po  collisions_tmp-collisions.Po  collisions_tmp-communicate.Po  collisions_tmp-init_tests.Po  collisions_tmp-util.Po  coupon_tmp-chisquare.Po  coupon_tmp-communicate.Po  coupon_tmp-coupon.Po  coupon_tmp-init_tests.Po  coupon_tmp-stirling.Po  coupon_tmp-util.Po  equidist_tmp-chisquare.Po  equidist_tmp-communicate.Po  equidist_tmp-equidist.Po  equidist_tmp-init_tests.Po  equidist_tmp-util.Po  gap_tmp-chisquare.Po  gap_tmp-communicate.Po  gap_tmp-gap.Po  gap_tmp-init_tests.Po  gap_tmp-util.Po  maxt_tmp-chisquare.Po  maxt_tmp-communicate.Po  maxt_tmp-init_tests.Po  maxt_tmp-maxt.Po  maxt_tmp-util.Po  metropolis_tmp-chisquare.Po  metropolis_tmp-communicate.Po  metropolis_tmp-init_tests.Po  metropolis_tmp-metropolis.Po  metropolis_tmp-util.Po  perm_tmp-chisquare.Po  perm_tmp-communicate.Po  perm_tmp-init_tests.Po  perm_tmp-perm.Po  perm_tmp-util.Po  poker_tmp-chisquare.Po  poker_tmp-communicate.Po  poker_tmp-init_tests.Po  poker_tmp-poker.Po  (+27 more)
ext/sprng5/TESTS/testu01/: FIPS_140_2.sprng  Makefile  Makefile.am  Makefile.in  alphabit.sprng  bigCrush.sprng  crush.sprng  rabbit.sprng  smallCrush.sprng  tu01_FIPS_140_2.cpp  tu01_alphabit.cpp  tu01_bigCrush.cpp  tu01_crush.cpp  tu01_rabbit.cpp  tu01_smallCrush.cpp
ext/sprng5/TESTS/testu01/.deps/: FIPS_140_2_tmp-tu01_FIPS_140_2.Po  alphabit_tmp-tu01_alphabit.Po  bigCrush_tmp-tu01_bigCrush.Po  crush_tmp-tu01_crush.Po  rabbit_tmp-tu01_rabbit.Po  smallCrush_tmp-tu01_smallCrush.Po
ext/sprng5/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
ext/sprng5/check/: Makefile  Makefile.am  Makefile.in  checksprng  gencheck
ext/sprng5/check/cmrg/: Makefile  Makefile.am  Makefile.in  check.ccmrg
ext/sprng5/check/lcg/: Makefile  Makefile.am  Makefile.in  check.clcg
ext/sprng5/check/lcg64/: Makefile  Makefile.am  Makefile.in  time.clcg64
ext/sprng5/check/lfg/: Makefile  Makefile.am  Makefile.in  check.clfg  check_sim.clfg  timing.cpp
ext/sprng5/check/mlfg/: Makefile  Makefile.am  Makefile.in  check_gen.cpp  check_sim.cmlfg  mlfg.data  time.cmlfg
ext/sprng5/check/pmlcg/: Makefile  Makefile.am  Makefile.in  check_gen.cpp  check_sim.cpmlcg  pmlcg.data  time.cpmlcg
ext/sprng5/include/: Makefile  Makefile.in  bignum.h  cmrg.h  lcg.h  lcg64.h  mlfg.h  pmlcg.h  sprng.h  sprng_cpp.h
ext/sprng5/lib/: Makefile  Makefile.am  Makefile.in
(+103 files in other folders)
